--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,37 @@ services:
     build:
       context: ./api
     volumes:
-      - ./api:/app
+    - ./api:/app
+    environment:
+    - 'VAULT_ADDR=http://vault:8200'
+    - 'VAULT_TOKEN=abc123'
+    - 'CLIENT_SECRETS_FILE=/secrets/client_secrets.json'
+    - 'OAUTH2_SCOPES=https://www.googleapis.com/auth/drive.metadata.readonly'
+    - 'FLASK_SECRET=cba321'
+    - 'OAUTH2_REDIRECT=https://localhost:44443/oauth2callback'
+    networks:
+    - default
+    volumes:
+    - ./api:/app
+    - ${HOME}/.secrets/local_testing.json:/secrets/client_secrets.json
+  vault:
+    image: vault:1.2.3
+    networks:
+    - default
     ports:
-      - '8081:80'
+    - '8200:8200'
+    environment:
+    - 'VAULT_DEV_ROOT_TOKEN_ID=abc123'
+    cap_add:
+    - IPC_LOCK
+  web:
+    image: nginx:1.17.4
+    volumes:
+    - ./nginx.conf:/etc/nginx/nginx.conf
+    - ${HOME}/.certs/localhost.crt:/etc/ssl/certs/localhost.crt
+    - ${HOME}/.certs/localhost.key:/etc/ssl/private/localhost.key
+    networks:
+    - default
+    ports:
+    - 8080:80
+    - 44443:443
