--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+
   api: 
     build:
       context: ./api
@@ -18,6 +19,7 @@ services:
     volumes:
     - ./api:/app
     - ${HOME}/.secrets/local_testing.json:/secrets/client_secrets.json
+
   vault:
     image: vault:1.2.3
     networks:
@@ -28,8 +30,10 @@ services:
     - 'VAULT_DEV_ROOT_TOKEN_ID=abc123'
     cap_add:
     - IPC_LOCK
+
   web:
     image: nginx:1.17.4
+    restart: on-failure
     volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf
     - ${HOME}/.certs/localhost.crt:/etc/ssl/certs/localhost.crt
