--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,4 +5,4 @@ copy requirements.txt requirements.txt
 run pip install -r requirements.txt
 copy . .
 env PYTHONPATH /app
-cmd [ "gunicorn", "-c", "gunicorn.conf", "--reload", "server:app" ]
+cmd [ "gunicorn", "-c", "gunicorn_conf.py", "--reload", "server:app" ]
