--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,21 @@ services:
       context: ./api
     volumes:
     - ./api:/app
+    - ${HOME}/.certs/localhost.crt:/etc/ssl/certs/localhost.crt
+    - ${HOME}/.certs/localhost.key:/etc/ssl/private/localhost.key
+    - ${HOME}/.secrets/local_testing.json:/secrets/client_secrets.json
     environment:
+    - 'DEBUG=True'
     - 'VAULT_ADDR=http://vault:8200'
     - 'VAULT_TOKEN=abc123'
     - 'CLIENT_SECRETS_FILE=/secrets/client_secrets.json'
     - 'OAUTH2_SCOPES=https://www.googleapis.com/auth/drive.metadata.readonly'
     - 'FLASK_SECRET=cba321'
-    - 'OAUTH2_REDIRECT=https://localhost:44443/oauth2callback'
+    - 'OAUTH2_REDIRECT=https://localhost:4443/oauth2callback'
     networks:
     - default
-    volumes:
-    - ./api:/app
-    - ${HOME}/.secrets/local_testing.json:/secrets/client_secrets.json
+    ports:
+    - '8008:80'
 
   vault:
     image: vault:1.2.3
@@ -33,7 +36,7 @@ services:
 
   web:
     image: nginx:1.17.4
-    restart: on-failure
+    restart: always
     volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf
     - ${HOME}/.certs/localhost.crt:/etc/ssl/certs/localhost.crt
@@ -42,4 +45,4 @@ services:
     - default
     ports:
     - 8080:80
-    - 44443:443
+    - 4443:443
