--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ http {
 
 	server {
 		listen	80 default_server;
-		return	301 https://$server_name:44443$request_uri;
+		return	301 https://localhost:4443$request_uri;
 	}
 
 	server {
@@ -15,10 +15,10 @@ http {
 		ssl_protocols	TLSv1.2 TLSv1.1 TLSv1;
 
 		location /auth {
-			proxy_pass	http://api:80/auth;
+			proxy_pass	https://api:80/auth;
 		}
 		location /oauth2callback {
-			proxy_pass	http://api:80/oauth2callback;
+			proxy_pass	https://api:80/oauth2callback;
 		}
 	}
 
