--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,4 +5,4 @@ copy requirements.txt requirements.txt
 run pip install -r requirements.txt
 copy . .
 env PYTHONPATH /app
-cmd [ "python", "api.py" ]
+cmd [ "gunicorn", "-c", "gunicorn_conf.py", "--reload", "server:app" ]
