--- a/api/grpc/Dockerfile
+++ b/api/grpc/Dockerfile
@@ -4,5 +4,6 @@ workdir /app
 copy requirements.txt requirements.txt
 run pip install -r requirements.txt
 copy . .
+copy ./python_pb /python_pb
 env PYTHONPATH /app
-cmd [ "python", "api.py" ]
+cmd [ "python", "grpc_server.py" ]
